updating placement rules and replica set to match proper

--- a/acm/vmapp/03_application.yaml
+++ b/acm/vmapp/03_application.yaml
@@ -9,7 +9,7 @@ spec:
       - key: app  
         operator: In
         values:
-        - simplevm 
+        - vmapp 
   componentKinds:
   - group: app.ibm.com/v1alpha1
     kind: Subscription
