--- a/vm-assets/replica_set.yaml
+++ b/vm-assets/replica_set.yaml
@@ -2,6 +2,8 @@ apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstanceReplicaSet
 metadata:
   name: vmi-replicaset-fedora
+  labels:
+    app: simplevm
 spec:
   replicas: 3
   selector:
