--- a/vm-assets/service.yaml
+++ b/vm-assets/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: helloworld
+  annotations:
+    skupper.io/proxy: http
   labels:
     app: simplevm
 spec:
