fixed the issue with group creation/rolebinding

--- a/policy/policy-adminsgroup-rolebinding.yaml
+++ b/policy/policy-adminsgroup-rolebinding.yaml
@@ -11,24 +11,28 @@ spec:
   complianceType: musthave
   remediationAction: enforce
   disabled: false
-  namespaces:
-    exclude: ["kube-*"]
-    include: ["default"]
-  object-templates:
-    - complianceType: musthave
-      objectDefinition:
-        kind: ClusterRoleBinding # role binding must exist
-        apiVersion: rbac.authorization.k8s.io/v1
+  policy-templates:
+    - objectDefinition:
+        apiVersion: policy.open-cluster-management.io/v1
+        kind: ConfigurationPolicy
         metadata:
-          name: cluster-admin-group
-        subjects:
-        - kind: Group
-          apiGroup: rbac.authorization.k8s.io
-          name: cluster-admins
-        roleRef:
-          kind: ClusterRole #this must be Role or ClusterRole
-          name: cluster-admin # this must match the name of the Role or ClusterRole you wish to bind to
-          apiGroup: rbac.authorization.k8s.io
+          name: policy-admingroup-rolebinding
+        spec:
+          object-templates:
+            - complianceType: musthave
+              objectDefinition:
+                kind: ClusterRoleBinding # role binding must exist
+                apiVersion: rbac.authorization.k8s.io/v1
+                metadata:
+                  name: cluster-admin-group
+                subjects:
+                - kind: Group
+                  apiGroup: rbac.authorization.k8s.io
+                  name: cluster-admins
+                roleRef:
+                  kind: ClusterRole #this must be Role or ClusterRole
+                  name: cluster-admin # this must match the name of the Role or ClusterRole you wish to bind to
+                  apiGroup: rbac.authorization.k8s.io
 
 ---
 apiVersion: policy.open-cluster-management.io/v1
