--- a/policy/policy-adminsgroup.yaml
+++ b/policy/policy-adminsgroup.yaml
@@ -58,3 +58,7 @@ spec:
       operator: In
       values:
       - OpenShift
+    - key: cloud 
+      operator: NotIn
+      values:
+      - VMWare
