--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-policy/kustomization.yaml
+policies/kustomization.yaml
