--- a/policies/policy-adminsgroup-rolebinding.yaml
+++ b/policies/policy-adminsgroup-rolebinding.yaml
@@ -64,3 +64,7 @@ spec:
       operator: In
       values:
       - OpenShift
+    - key: cloud 
+      operator: NotIn
+      values:
+      - VMWare
