added simple application that uses kubernetes example app

--- a/acm/simpleapp/04_placementrule.yml
+++ b/acm/simpleapp/04_placementrule.yml
@@ -1,11 +1,10 @@
+---
 apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
-  labels:
-    app: simplevm
-  name: ovirtenabled
-  namespace: simple-vmapp
+  name: guestbook-placement
+  namespace: guestbook-app
 spec:
   clusterSelector:
     matchLabels:
-      kubevirt: "true"
+      purpose: development
