--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-policies/kustomization.yaml
+acm/policies/kustomization.yaml
